--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,10 @@ spring:
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   redis:
     host: localhost #localhost redis
     port: 6379
   session:
     timeout: 60m
+    store-type: redis
