--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,8 @@ services:
     depends_on:
       postgres:
         condition: service_started
+      redis:
+        condition: service_started
     ports:
       - "8080:8080"
     networks:
