--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     hibernate:
       ddl-auto: update
   redis:
-    host: localhost #localhost redis
+    host: redis #localhost redis
     port: 6379
   session:
     timeout: 60m
