--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,19 @@ services:
       - app-network
     restart: always
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "80:80"
+    networks:
+      - app-network
+    restart: always
+    depends_on:
+      - postgres
 
   redis:
     image: "redis:alpine"
@@ -24,6 +37,7 @@ services:
     networks:
       - app-network
     restart: always
+
 
   application:
     build: .
